# Riping-Browser

./: Cargo.toml  README.md  default.conf.json  index.html  main.js  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
