[package]
name = "riping-browser"
version = "0.1.0"
description = "A proper standalone desktop browser"
authors = ["WebDevChaos987"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Enforces tiny file sizes
codegen-units = 1
lto = true
opt-level = "s"
